--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -39,11 +39,11 @@
         </div>
         <div class="mt-3 text-center sm:mt-5">
           <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-            Привет!
+            Hi!
           </h3>
           <div class="mt-2">
             <p class="text-sm text-gray-500">
-              Я Юра и это мое резюме
+              I'm Yura and this is my CV
             </p>
           </div>
         </div>
@@ -54,7 +54,7 @@
           type="button"
           class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm"
         >
-          Понятно
+          Got it
         </button>
       </div>
     </div>
