--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,7 +1,7 @@
 <div class="flow-root md:px-6">
   <div class="pb-5">
     <h3 class="text-3xl leading-6 font-medium text-gray-900">
-      Опыт работы
+      Work experience
     </h3>
   </div>
   <ul role="list" class="-mb-8 mt-12">
