--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -12,7 +12,7 @@
           <div class="relative">
             <img
               class="h-20 w-20 rounded-full flex items-center justify-center bg-white"
-              src="assets/images/logo-avalon.jpg"
+              src="assets/images/logo-scriptive.svg"
               alt="">
           </div>
           <div class="min-w-0 flex-1">
