--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="pb-5 flex xl:block">
       <img
         class="inline-block rounded-md w-20 md:w-48"
-        src="../../assets/images/avatar.jpeg"
+        src="../../assets/images/avatar.png"
         alt=""
       >
       <div class="mt-2 ml-4 xl:ml-0 max-w-xl text-sm text-gray-500">
