--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,27 +4,29 @@
       <h3 class="text-2xl mb-6 leading-6 font-medium text-gray-900">Pet-projects</h3>
       <div class="mt-6 max-w-xl text-sm text-gray-500">
         <ul role="list">
-          <li
-            *ngFor="let project of projects"
-            class="py-2 flex"
-          >
+          <li *ngFor="let project of projects" class="py-4 flex flex-col">
             <a
-              [href]=[project.link]
+              [href]="project.link"
               target="_blank"
-              type="button"
-              class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              class="inline-flex items-center px-4 py-2 gap-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-3 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                <path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
-              </svg>
+              <span [innerHTML]="project.icon"></span>
               {{ project.name }}
             </a>
-          </li>
 
+            <p *ngIf="project.note" class="mt-2 text-gray-600 text-sm">
+              {{ project.note }}
+            </p>
+
+            <p *ngIf="project.date" class="mt-1 text-gray-400 text-xs italic">
+              {{ project.date }}
+            </p>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 </div>
+
 
 <!--GitHub: https://github.com/yurifyodorov/yurifyodorov.github.io -->
